# clickstream-demo

./: .env.aiven.example  .env.local.example  .gitignore  LICENSE  README.md  docker-compose.yml  local-docker.md  pyproject.toml
clickstream/: app.py  consumer_runner.py  producer_runner.py
clickstream/base/: __init__.py  cache.py  consumer.py  producer.py  repositories.py  runner.py  service_health.py  session_state.py  sinks.py
clickstream/cli/: __init__.py  analytics.py  benchmark.py  config.py  consumer.py  data.py  lag.py  opensearch.py  producer.py  shared.py  status.py
clickstream/consumers/: __init__.py  base.py  batch_processor.py  factory.py
clickstream/consumers/bytewax/: __init__.py  config.py  consumer.py  opensearch_consumer.py  postgresql_consumer.py
clickstream/consumers/bytewax/sinks/: __init__.py  opensearch.py  postgresql.py
clickstream/consumers/bytewax/sources/: __init__.py  kafka.py
clickstream/consumers/confluent/: __init__.py  consumer.py  opensearch_consumer.py  postgresql_consumer.py
clickstream/consumers/kafka_python/: __init__.py  consumer.py  opensearch_consumer.py  postgresql_consumer.py
clickstream/consumers/mage/: __init__.py  consumer.py  executor.py  io_config.yaml  metadata.yaml
clickstream/consumers/quix/: __init__.py  config.py  consumer.py  opensearch_consumer.py  postgresql_consumer.py
clickstream/core/: __init__.py  models.py  session_processor.py
clickstream/framework/: __init__.py  base.py
clickstream/framework/bytewax/: __init__.py  config.py  opensearch_consumer.py  postgresql_consumer.py
clickstream/framework/default/: __init__.py  opensearch_consumer.py  postgresql_consumer.py  producer.py
clickstream/framework/mage/: __init__.py  executor.py  io_config.yaml  metadata.yaml
clickstream/framework/quix/: __init__.py  opensearch_consumer.py  postgresql_consumer.py  producer.py
clickstream/infrastructure/: __init__.py  kafka.py  metrics.py  session_state.py
clickstream/infrastructure/cache/: __init__.py  valkey.py
clickstream/infrastructure/repositories/: __init__.py  postgresql.py
clickstream/infrastructure/search/: __init__.py  opensearch.py
clickstream/producers/: __init__.py  base.py  factory.py
clickstream/producers/confluent/: __init__.py  producer.py
clickstream/producers/kafka_python/: __init__.py  producer.py
clickstream/producers/quix/: __init__.py  producer.py
clickstream/utils/: __init__.py  aiven.py  config.py  db.py  kafka.py  network.py  paths.py  rate_limiter.py  retry.py  session_state.py  versions.py
clickstream/utils/services/: __init__.py  aiven.py  local.py
opensearch/: clickstream-dashboards.ndjson
schema/: init.sql
terraform/: main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
terraform/modules/aiven/: main.tf  outputs.tf  privatelink.tf  variables.tf  versions.tf  vpc.tf
terraform/modules/aws/: main.tf  outputs.tf  user_data.sh  variables.tf  versions.tf  vpc_endpoints.tf
tests/: conftest.py  test_batch_processor.py  test_benchmark_ramp.py  test_cli_help.py  test_lag_cli.py  test_lag_metrics.py  test_rate_limiter.py
(+37 files in other folders)
